# Eficiencia2D

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCUMENTACION_SISTEMA.md  Dockerfile  Dockerfile.frontend  PROYECTO_RESUMEN.md  docker-compose.yml  errores.md  nixpacks.toml  package-lock.json  package.json  railway.toml  setup.sh  tsconfig.json
backend-selfhosted/: .env.example  Dockerfile  requirements.txt
backend-selfhosted/app/: config.py  main.py
backend-selfhosted/app/core/: contour_extractor.py  cutting_sheet.py  door_extractor.py  dxf_writer.py  facade_extractor.py  floor_plan_extractor.py  geometry_classifier.py  nesting.py  obj_parser.py  pdf_writer.py  pipeline.py  plan_extractor.py  skp_parser.py  types.py  wall_extractor.py
backend-selfhosted/tests/: test_api.py
backend/app/: config.py  main.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: UploadForm.tsx
frontend/src/lib/: api.ts
public/demo/: README.md
src/__tests__/: api-bypass.test.ts  api-verify.test.ts  assembly.test.ts  geometry-processing.test.ts  payment-flow.test.ts  slab-edge.test.ts  topology.test.ts
src/app/: layout.tsx  page.tsx
src/components/: BackgroundSymbols.tsx  DemoButton.tsx  GroupList.tsx  ModelViewer.tsx  NestingPreview.tsx  PaymentScreen.tsx  ReviewScreen.tsx  UploadForm.tsx  VisibilityFilters.tsx
src/core/: assembly-adjuster.ts  cutting-sheet.ts  door-extractor.ts  dxf-writer.ts  facade-extractor.ts  floor-plan-extractor.ts  geometry-classifier.ts  group-classifier.ts  joint-detector.ts  mesh-splitter.ts  obj-parser.ts  pdf-writer.ts  pipeline.ts  sheet-nester.ts  skp-parser.ts  slab-edge-detector.ts  types.ts  wall-extractor.ts  wall-thickness.ts
src/styles/: globals.css
translator/: CMakeLists.txt
translator-cpp/include/: dxf_writer.h  transform.h  wall.h  wall_extractor.h
translator-cpp/src/: dxf_writer.cpp  wall_extractor.cpp
translator/include/: pdf_writer.h  transform.h  vec3.h
translator/src/: main.cpp  pdf_writer.cpp
(+6 files in other folders)
